<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/Guide_v_10"
        app:layout_constraintGuide_percent=".10"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/Guide_v_90"
        app:layout_constraintGuide_percent=".90"
        />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etPhone"
        app:layout_constraintEnd_toStartOf="@id/Guide_v_90"
        app:layout_constraintStart_toStartOf="@id/Guide_v_10"
/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mobile_number"
        android:maxLength="10"
        android:inputType="phone"
        app:layout_constraintEnd_toStartOf="@id/Guide_v_90"
        app:layout_constraintStart_toStartOf="@id/Guide_v_10"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        />

    <Button
        android:id="@+id/btnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        app:layout_constraintTop_toBottomOf="@id/etPhone"
        app:layout_constraintEnd_toStartOf="@id/Guide_v_90"
        app:layout_constraintBottom_toTopOf="@id/etSms"
        />

    <EditText
        android:id="@+id/etSms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_message"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toStartOf="@id/Guide_v_90"
        app:layout_constraintStart_toStartOf="@id/Guide_v_10"
        app:layout_constraintTop_toBottomOf="@id/btnCall"
        app:layout_constraintBottom_toTopOf="@id/btnSms"
        />

    <Button
        android:id="@+id/btnSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        app:layout_constraintTop_toBottomOf="@id/etSms"
        app:layout_constraintEnd_toStartOf="@id/Guide_v_90"

        />
    <EditText
        android:id="@+id/etShare"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_message_that_you_want_to_share"
        app:layout_constraintEnd_toStartOf="@id/Guide_v_90"
        app:layout_constraintStart_toStartOf="@id/Guide_v_10"
        app:layout_constraintTop_toBottomOf="@id/btnSms"
        app:layout_constraintBottom_toTopOf="@id/btnShare"
        />
    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:layout_constraintTop_toBottomOf="@id/etShare"
        app:layout_constraintEnd_toStartOf="@id/Guide_v_90"
app:layout_constraintBottom_toTopOf="@id/etMailto"
        />
    <EditText
        android:id="@+id/etMailto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/to_email_address"
        app:layout_constraintEnd_toStartOf="@id/Guide_v_90"
        app:layout_constraintStart_toStartOf="@id/Guide_v_10"
        app:layout_constraintTop_toBottomOf="@id/btnShare"
        app:layout_constraintBottom_toTopOf="@id/etSubject"
        />
    <EditText
        android:id="@+id/etSubject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        app:layout_constraintEnd_toStartOf="@id/Guide_v_90"
        app:layout_constraintStart_toStartOf="@id/Guide_v_10"
        app:layout_constraintTop_toBottomOf="@id/etMailto"
        app:layout_constraintBottom_toTopOf="@id/etMailMess"
        />
    <EditText
        android:id="@+id/etMailMess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_message"
        android:lines="3"
        app:layout_constraintEnd_toStartOf="@id/Guide_v_90"
        app:layout_constraintStart_toStartOf="@id/Guide_v_10"
        app:layout_constraintTop_toBottomOf="@id/etSubject"
        />
    <Button
        android:id="@+id/btnMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        app:layout_constraintTop_toBottomOf="@id/etMailMess"
        app:layout_constraintEnd_toStartOf="@id/Guide_v_90"

        />
<TextView
    android:id="@+id/tvRating"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Rating"
    android:textSize="24sp"
    app:layout_constraintTop_toBottomOf="@id/btnMail"
    app:layout_constraintStart_toStartOf="@id/Guide_v_10"
    />

    <Button
        android:id="@+id/btnRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_rating"
        app:layout_constraintEnd_toStartOf="@id/Guide_v_90"
        app:layout_constraintTop_toBottomOf="@+id/tvRating"
        />
</androidx.constraintlayout.widget.ConstraintLayout>